[package]
name = "mercurial_curve"
version = "0.1.0"
authors = ["mercurial"]
edition = "2018"

[dependencies]
solana-program = "1.6.6"
spl-math = { version = "0.1.0", features = ["no-entrypoint"] }
num-derive = "0.3"
num-traits = "0.2"

[dev-dependencies]
assert_matches = "1.4.0"
simulation =  { path = "./lib/simulation" }
proptest = "1.0.0"
rand = "0.8.3"

[lib]
crate-type = ["lib"]